updated frontend to use pagination

--- a/Entregas/Pre-Entrega2/src/views/products.handlebars
+++ b/Entregas/Pre-Entrega2/src/views/products.handlebars
@@ -3,12 +3,17 @@
 </h1>
 <div id="products">
     <ul>
-        {{#each products.payload}}
+        {{#each products}}
         <li>
             <div id={{this.id}}>
                 <p>{{this.title}}</p>
                 <p>${{this.price}}</p>
                 <p>Cantidad Disponibles: {{this.stock}}</p>
+                <button id="addtoCart-{{this.id}}", >Agregar al carrito</button>
+                <button id="deleteProduct-{{this.id}}", >Eliminar</button>
+                <a href="/product/{{this.id}}">
+                    <button>Detalles del producto</button>
+                </a>
                 <br>
             </div>
         </li>
@@ -16,8 +21,22 @@
     </ul>
 </div>
 <div>
-    <button id="prevPage",type="button">Prev Page</button>
-    <button id="nextPage",type="button">Next Page</button>
+    {{#if hasPrevPAge}}
+        <a href="/products?page={{prevPage}}&limit={{limit}}&sort={{sort}}&category={{category}}&status={{status}}">
+            <button type="button">PrevPage</button>
+        </a>
+    {{else}}
+        <button type="button" disabled>PrevPage</button>
+    {{/if}}
+    {{#if hasNextPage}}
+        <a href="/products?page={{nextPage}}&limit={{limit}}&sort={{sort}}&category={{category}}&status={{status}}">
+            <button type="button">NextPage</button>
+        </a>
+    {{else}}
+        <button type="button" disabled>NextPage</button>
+    {{/if}}
+
+    </a>
 </div>
 
 <script src="/js/products.js"></script>
