--- a/Entregas/Challenge-5-login/src/views/register.handlebars
+++ b/Entregas/Challenge-5-login/src/views/register.handlebars
@@ -28,9 +28,9 @@
 
         <br />
 
-        <label>Contraseña</label>
+        <label >Contraseña</label>
 
-        <input type="password" />
+        <input name="password" type="password" />
 
         <input type="submit" />
 
@@ -40,4 +40,6 @@
 
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="/js/register.js"></script>
