--- a/Entregas/Challenge-6-autenticacion-terceros/src/views/login.handlebars
+++ b/Entregas/Challenge-6-autenticacion-terceros/src/views/login.handlebars
@@ -1,20 +1,28 @@
 <div>
   <h1>Login</h1>
   <form id="loginForm">
-    <label>Email</label>
-    <input name="email" />
-    <br />
-    <label>Contraseña</label>
-    <input type="password" name="password" />
-    <input type="submit" />
+    <table>
+      <tr>
+        <td><label>Email</label></td>
+        <td><input name="email" /></td>
+      </tr>
+      <tr>
+        <td><label>Contraseña</label></td>
+        <td><input type="password" name="password" /></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><input type="submit" /></td>
+      </tr>
+    </table>
+    <div id='spinner' class="spinner-grow text-primary" role="status" style="display: none">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+    <div>
+      <a href="/api/sessions/github"><button>Entrar con GitHub</button></a>
+    </div>
   </form>
   <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
-  <div id='spinner' class="spinner-grow text-primary" role="status" style="display: none">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div>
-    <a href="/api/sessions/github"><button>Entrar con GitHub</button></a>
-  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
