--- a/Entregas/Challenge-6-autenticacion-terceros/src/views/register.handlebars
+++ b/Entregas/Challenge-6-autenticacion-terceros/src/views/register.handlebars
@@ -1,43 +1,34 @@
 <div>
-
-    <h1>Registro</h1>
-
-    <form id="registerForm">
-
-        <label>Nombre</label>
-
-        <input name="first_name" />
-
-        <br />
-
-        <label>Apellido</label>
-
-        <input name="last_name" />
-
-        <br />
-
-        <label>Email</label>
-
-        <input name="email" />
-
-        <br />
-
-        <label>Edad</label>
-
-        <input name="age" />
-
-        <br />
-
-        <label>Contraseña</label>
-
-        <input type="password" />
-
-        <input type="submit" />
-
-    </form>
-
-    <p>¿Ya tienes una cuenta? <a href="/login">Ingresa aquí</a></p>
-
+  <h1>Registro</h1>
+  <form id="registerForm">
+    <table>
+      <tr>
+        <td><label>Nombre</label></td>
+        <td><input name="first_name" /></td>
+      </tr>
+      <tr>
+        <td><label>Apellido</label></td>
+        <td><input name="last_name" /></td>
+      </tr>
+      <tr>
+        <td><label>Email</label></td>
+        <td><input name="email" /></td>
+      </tr>
+      <tr>
+        <td><label>Edad</label></td>
+        <td><input name="age" /></td>
+      </tr>
+      <tr>
+        <td><label>Contraseña</label></td>
+        <td><input type="password" name="password" /></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><input type="submit" /></td>
+      </tr>
+    </table>
+  </form>
+  <p>¿Ya tienes una cuenta? <a href="/login">Ingresa aquí</a></p>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
