Saco del form el boton para ingresar con github

--- a/Entregas/Challenge-6-autenticacion-terceros/src/views/login.handlebars
+++ b/Entregas/Challenge-6-autenticacion-terceros/src/views/login.handlebars
@@ -15,14 +15,15 @@
         <td><input type="submit" /></td>
       </tr>
     </table>
-    <div id='spinner' class="spinner-grow text-primary" role="status" style="display: none">
-      <span class="visually-hidden">Loading...</span>
-    </div>
-    <div>
-      <a href="/api/sessions/github"><button>Entrar con GitHub</button></a>
-    </div>
   </form>
   <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
+
+  <div id='spinner' class="spinner-grow text-primary" role="status" style="display: none">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <div>
+    <a href="/api/sessions/github/"><button>Entrar con GitHub</button></a>
+  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
