--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -6,11 +6,17 @@
         <li>Rol: {{user.role}}</li>
     </ul>
 </div>
-
 <div>
     <a href="/cart/{{user.cartId}}">
         <button>
             Carrito
+        </button>
+    </a>
+</div>
+<div>
+    <a href="/messages">
+        <button>
+            Chat
         </button>
     </a>
 </div>
@@ -30,7 +36,8 @@
                 <button id="pid-{{this.id}}-cid-{{../user.cartId}}">Agregar al carrito</button>
                 {{else}}
                 <button disabled>Agregar al carrito</button>
-                {{/if}} <button id="deleteProduct-{{this.id}}" ,>Eliminar</button>
+                {{/if}}
+                <button id="deleteProduct-{{this.id}}">Eliminar producto</button>
                 <a href="/product/{{this.id}}">
                     <button>Detalles del producto</button>
                 </a>
