--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -1,27 +1,52 @@
-<h1>Producto</h1>
-<p></p>
-<div id="product">
-    <div id="{{product._id}}">
-        <p>{{product.title}}</p>
-        <p>{{product.description}}</p>
-        <p>Código: {{product.code}}</p>
-        <p>Estado: {{product.status}}</p>
-        <p>Categoría: {{product.category}}</p>
-        <p>${{product.price}}</p>
-        <p>Cantidad Disponible: {{product.stock}}</p>
-        {{#if product.thumbnails}}
-            {{#each product.thumbnails}}
-                <img src="{{this}}" alt="img" />
-            {{/each}}
-        {{/if}}
-        {{#if product.stock}}
-            <button id="pid-{{product._id}}-cid-{{user.cartId}}">Agregar al carrito</button>
-        {{else}}
+<header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/products">Ecommerce</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto d-flex align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cart/{{user.cartId}}">Carrito</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/messages">Chat</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/user" class="nav-link">Mi Cuenta</a>
+                    </li>
+                    <li class="nav-item">
+                        <button id="logout" type="button" class="btn btn-danger">Cerrar Sesion</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<h1 class="m-3">Producto</h1>
+<div id="product" class="d-flex justify-content-center">
+    <div id={{product._id}} class="card m-3 p-2" style="width: 30rem; height: 30rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{product.title}}</h5>
+            <p class="card-text">{{product.description}}</p>
+            <br>
+            <p class="card-text">Código: {{product.code}}</p>
+            <p class="card-text">Categoría: {{product.category}}</p>
+            <p class="card-text">Precio: ${{product.price}}</p>
+            <p class="card-text">Stock: {{product.stock}}</p>
+            <p class="card-text"></p>
+            {{#if product.stock}}
+            <button id="pid-{{product._id}}-cid-{{user.cartId}}" type="button" class="btn btn-primary">Agregar al
+                carrito</button>
+            {{else}}
             <p>Sin stock</p>
-        {{/if}}
-        <br />
+            {{/if}}
+            <button id="deleteProduct-{{product.id}}" type="button" class="btn btn-danger">Eliminar producto</button>
+        </div>
     </div>
 </div>
-
 
 <script src="/js/products.js"></script>
