agrego cambios de la tercer practica integradora

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -4,15 +4,16 @@
     <form id="loginForm">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email</label>
-        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="adminCoder@coder.com">
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-        <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+        <input type="password" name="password" class="form-control" id="exampleInputPassword1" value="adminCod3r123">
       </div>
       <button type="submit" class="btn btn-primary">Ingresar</button>
     </form>
 
+    <p>¿Olvidaste tu constraseña? <a href="/forgotPass">Restaurar Contraseña</a></p>
     <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
 
     <div class="thirdsLogin">
