--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -68,3 +68,13 @@ a{
     font-size: 1.2rem;
     list-style: none;
 }
+
+.restorePassword{
+    background-color: rgba(90, 89, 89, 0.535);
+    color: white;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
