--- a/src/views/user.handlebars
+++ b/src/views/user.handlebars
@@ -39,3 +39,5 @@
     </div>
     <button type="button" class="btn btn-primary" id="restorePassword">Restaurar Contraseña</button>
 </section>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
