--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -42,6 +42,14 @@ a{
     text-decoration: none !important;
 }
 
+.register{
+    background-color: rgba(67, 65, 65, 0.712);
+    height: 100vh;
+    padding: 20px 0px 20px 20px;
+    color: white;
+    font-size: 1.1rem;
+}
+
 .github{
     background-color: white;
     color: black;
