--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -18,7 +18,7 @@
 
     <div class="thirdsLogin">
       <a href="/api/sessions/github/">
-        <button class="github"><img class="githubImg"
+        <button class="github btn btn-light"><img class="githubImg"
             src="https://res.cloudinary.com/dgk9fa4rw/image/upload/v1684095231/ImgAppReact/img/github_q86q9w.png">Ingresar
           con GitHub</button>
       </a>
